# GNU gcal
#
# Copyright (C) 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002,
# 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2013 Free
# Software Foundation, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

miscdailyDIR = daily#
miscdailySCRIPTFILES = \
  $(miscdailyDIR)/daily
miscdailyDATAFILES = \
  $(srcdir)/$(miscdailyDIR)/daily.awk \
  $(srcdir)/$(miscdailyDIR)/daily.pl \
  $(srcdir)/$(miscdailyDIR)/daily.rc
miscdailyMISCFILES = \
  $(srcdir)/$(miscdailyDIR)/daily.in \
  $(srcdir)/$(miscdailyDIR)/daily.bat

miscddiffDIR = ddiff#
miscddiffSCRIPTFILES = \
  $(miscddiffDIR)/ddiff \
  $(miscddiffDIR)/ddiffdrv
miscddiffDATAFILES = \
  $(srcdir)/$(miscddiffDIR)/ddiff1.awk \
  $(srcdir)/$(miscddiffDIR)/ddiff1.pl \
  $(srcdir)/$(miscddiffDIR)/ddiff2.awk \
  $(srcdir)/$(miscddiffDIR)/ddiff2.pl \
  $(srcdir)/$(miscddiffDIR)/ddiffdrv.awk \
  $(srcdir)/$(miscddiffDIR)/ddiffdrv.pl \
  $(srcdir)/$(miscddiffDIR)/zone.tab
miscddiffMISCFILES = \
  $(srcdir)/$(miscddiffDIR)/ddiff.in \
  $(srcdir)/$(miscddiffDIR)/ddiff.@ \
  $(srcdir)/$(miscddiffDIR)/ddiff.bat \
  $(srcdir)/$(miscddiffDIR)/ddiffdrv.in \
  $(srcdir)/$(miscddiffDIR)/ddiffdrv.bat

miscdstDIR = dst#
miscdstSCRIPTFILES = \
  $(miscdstDIR)/dst
miscdstDATAFILES = \
  $(srcdir)/$(miscdstDIR)/dst.awk \
  $(srcdir)/$(miscdstDIR)/dst.pl
miscdstMISCFILES = \
  $(srcdir)/$(miscdstDIR)/dst.in

miscgcalltxDIR = gcalltx#
miscgcalltxSCRIPTFILES = \
  $(miscgcalltxDIR)/gcalltx \
  $(miscgcalltxDIR)/gcalltx.pl
miscgcalltxDATAFILES = \
  $(srcdir)/$(miscgcalltxDIR)/gcalltx.sed
miscgcalltxMISCFILES = \
  $(srcdir)/$(miscgcalltxDIR)/gcalltx.in \
  $(srcdir)/$(miscgcalltxDIR)/gcalltx.bat \
  $(srcdir)/$(miscgcalltxDIR)/gcalltxp.in

miscmoonDIR = moon#
miscmoonSCRIPTFILES = \
  $(miscmoonDIR)/moon
miscmoonDATAFILES =
miscmoonMISCFILES = \
  $(srcdir)/$(miscmoonDIR)/moon.in \
  $(srcdir)/$(miscmoonDIR)/moon.bat \
  $(srcdir)/$(miscmoonDIR)/moon1.awk \
  $(srcdir)/$(miscmoonDIR)/moon2.awk

miscmrmsDIR = mrms#
miscmrmsSCRIPTFILES = \
  $(miscmrmsDIR)/mrms
miscmrmsDATAFILES = \
  $(srcdir)/$(miscmrmsDIR)/mrms.awk \
  $(srcdir)/$(miscmrmsDIR)/mrms.pl \
  $(srcdir)/$(miscmrmsDIR)/mrms.rc
miscmrmsMISCFILES = \
  $(srcdir)/$(miscmrmsDIR)/mrms.in \
  $(srcdir)/$(miscmrmsDIR)/mrms.bat

miscsrssDIR = srss#
miscsrssSCRIPTFILES = \
  $(miscsrssDIR)/srss
miscsrssDATAFILES = \
  $(srcdir)/$(miscsrssDIR)/srss.awk \
  $(srcdir)/$(miscsrssDIR)/srss.pl \
  $(srcdir)/$(miscsrssDIR)/srss.rc
miscsrssMISCFILES = \
  $(srcdir)/$(miscsrssDIR)/srss.in \
  $(srcdir)/$(miscsrssDIR)/srss.bat

miscwlocDIR = wloc#
miscwlocSCRIPTFILES = \
  $(miscwlocDIR)/wlocdrv
miscwlocDATAFILES = \
  $(srcdir)/$(miscwlocDIR)/wlocdrv1.awk \
  $(srcdir)/$(miscwlocDIR)/wlocdrv1.pl \
  $(srcdir)/$(miscwlocDIR)/wlocdrv2.awk \
  $(srcdir)/$(miscwlocDIR)/wlocdrv2.pl \
  $(srcdir)/$(miscwlocDIR)/zone.tab
miscwlocMISCFILES = \
  $(srcdir)/$(miscwlocDIR)/wlocdrv.in \
  $(srcdir)/$(miscwlocDIR)/wlocdrv.bat

miscSCRIPTFILES = \
  $(miscdailySCRIPTFILES) \
  $(miscddiffSCRIPTFILES) \
  $(miscdstSCRIPTFILES) \
  $(miscgcalltxSCRIPTFILES) \
  $(miscmoonSCRIPTFILES) \
  $(miscmrmsSCRIPTFILES) \
  $(miscsrssSCRIPTFILES) \
  $(miscwlocSCRIPTFILES)

miscDATAFILES = \
  $(miscdailyDATAFILES) \
  $(miscddiffDATAFILES) \
  $(miscdstDATAFILES) \
  $(miscgcalltxDATAFILES) \
  $(miscmoonDATAFILES) \
  $(miscmrmsDATAFILES) \
  $(miscsrssDATAFILES) \
  $(miscwlocDATAFILES)

miscINFOFILES = \
  $(srcdir)/README \
  $(srcdir)/gcalmagic.add

miscMISCFILES = \
  $(miscdailyMISCFILES) \
  $(miscddiffMISCFILES) \
  $(miscdstMISCFILES) \
  $(miscgcalltxMISCFILES) \
  $(miscmoonMISCFILES) \
  $(miscmrmsMISCFILES) \
  $(miscsrssMISCFILES) \
  $(miscwlocMISCFILES) \
  $(srcdir)/locale.alias \
  $(srcdir)/magic.add \
  $(srcdir)/Makefile.in

EXTRA_DIST = \
  $(miscDATAFILES) \
  $(miscINFOFILES) \
  $(miscSCRIPTFILES) \
  $(miscMISCFILES)

gcalltx/gcalltx.pl:
	cp gcalltx/gcalltxp gcalltx/gcalltx.pl
	chmod u+x gcalltx/gcalltx.pl
