EXTRA_DIST =  result1.txt  result5a.txt  stats1.txt  stats4.txt  test.1  test.4  test_combine \
          result2.txt  result5b.txt  stats2.txt  stats5.txt  test.2  test.5 \
          result4.txt  result6.txt   stats3.txt  stats6.txt  test.3  test.6 \
          result7.txt  stats7.txt 


check: 
	$(srcdir)/test_combine $(srcdir) $(top_builddir)/tests
