# GNU gcal
#
# Copyright (C) 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002,
# 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2013 Free
# Software Foundation, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

dataREADMEFILE = \
  $(srcdir)/README

dataGCALRCFILE = \
  $(srcdir)/gcalrc

dataEXAMPLEFILES = \
  $(srcdir)/ansipic.rc \
  $(srcdir)/birthday.rc \
  $(srcdir)/bkk.rc \
  $(srcdir)/de-mdata.rc \
  $(srcdir)/de-sdata.rc \
  $(srcdir)/mdata.rc \
  $(srcdir)/meteoric.rc \
  $(srcdir)/ms.rc \
  $(srcdir)/sdata.rc \
  $(srcdir)/sun-moon.rc \
  $(srcdir)/textpic.rc \
  $(srcdir)/wloc.rc \
  $(srcdir)/wtt1.rc \
  $(srcdir)/wtt2.rc \
  $(srcdir)/wtt3.rc

dataMISCFILES = \
  $(srcdir)/Makefile.in \
  $(dataREADMEFILE) \
  $(dataGCALRCFILE) \
  $(dataEXAMPLEFILES)

datacalendarsDIR = calendars#
datacalendarsFILES = \
  $(srcdir)/$(datacalendarsDIR)/calendar.birth \
  $(srcdir)/$(datacalendarsDIR)/calendar.chris \
  $(srcdir)/$(datacalendarsDIR)/calendar.compu \
  $(srcdir)/$(datacalendarsDIR)/calendar.histo \
  $(srcdir)/$(datacalendarsDIR)/calendar.holid \
  $(srcdir)/$(datacalendarsDIR)/calendar.judai \
  $(srcdir)/$(datacalendarsDIR)/calendar.music \
  $(srcdir)/$(datacalendarsDIR)/calendar.ushol

datadatesDIR = dates#
datadatesFILES = \
  $(srcdir)/$(datadatesDIR)/ancient \
  $(srcdir)/$(datadatesDIR)/can_holiday \
  $(srcdir)/$(datadatesDIR)/celtic \
  $(srcdir)/$(datadatesDIR)/computing \
  $(srcdir)/$(datadatesDIR)/events \
  $(srcdir)/$(datadatesDIR)/events1 \
  $(srcdir)/$(datadatesDIR)/events2 \
  $(srcdir)/$(datadatesDIR)/events3 \
  $(srcdir)/$(datadatesDIR)/events4 \
  $(srcdir)/$(datadatesDIR)/events5 \
  $(srcdir)/$(datadatesDIR)/events6 \
  $(srcdir)/$(datadatesDIR)/gdead \
  $(srcdir)/$(datadatesDIR)/hawaii \
  $(srcdir)/$(datadatesDIR)/literature \
  $(srcdir)/$(datadatesDIR)/lives \
  $(srcdir)/$(datadatesDIR)/lives1 \
  $(srcdir)/$(datadatesDIR)/lives2 \
  $(srcdir)/$(datadatesDIR)/lives3 \
  $(srcdir)/$(datadatesDIR)/lives4 \
  $(srcdir)/$(datadatesDIR)/lives5 \
  $(srcdir)/$(datadatesDIR)/lives6 \
  $(srcdir)/$(datadatesDIR)/lotr \
  $(srcdir)/$(datadatesDIR)/movies \
  $(srcdir)/$(datadatesDIR)/music \
  $(srcdir)/$(datadatesDIR)/radio \
  $(srcdir)/$(datadatesDIR)/sfo \
  $(srcdir)/$(datadatesDIR)/space \
  $(srcdir)/$(datadatesDIR)/sports \
  $(srcdir)/$(datadatesDIR)/television \
  $(srcdir)/$(datadatesDIR)/usa_holiday \
  $(srcdir)/$(datadatesDIR)/usa_other \
  $(srcdir)/$(datadatesDIR)/usa_states \
  $(srcdir)/$(datadatesDIR)/witchcraft \
  $(srcdir)/$(datadatesDIR)/world
datadatesMISCFILES = \
  $(srcdir)/$(datadatesDIR)/CREDITS \
  $(srcdir)/$(datadatesDIR)/README

datascriptsDIR = scripts#
datascriptsFILES = \
  $(srcdir)/$(datascriptsDIR)/cal2gcal.awk \
  $(srcdir)/$(datascriptsDIR)/cal2gcal.pl \
  $(srcdir)/$(datascriptsDIR)/ct2gcal.awk \
  $(srcdir)/$(datascriptsDIR)/ct2gcal.pl \
  $(srcdir)/$(datascriptsDIR)/old2v220.awk \
  $(srcdir)/$(datascriptsDIR)/old2v220.pl \
  $(srcdir)/$(datascriptsDIR)/v2x2v300.awk \
  $(srcdir)/$(datascriptsDIR)/v2x2v300.pl

dist_pkgdata_DATA = \
  $(dataMISCFILES) \
  $(datacalendarsFILES) \
  $(datadatesFILES) \
  $(datadatesMISCFILES) \
  $(datascriptsFILES)
