#
# Makefile.am for states tests.
# Copyright (c) 1997 Markku Rossi
#
# Author: Markku Rossi <mtr@iki.fi>
#

#
# This file is part of GNU Enscript.
#
# Enscript is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Enscript is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Enscript.  If not, see <http://www.gnu.org/licenses/>.
#

AUTOMAKE_OPTIONS =

TESTS = startrules.test namerules.test optionstate.test \
firstmatch.test longestmatch.test icase.test vardef.test exprs.test \
primconcat.test primfloat.test primgetenv.test primint.test \
primlength.test primlist.test primprint.test primregexp.test \
primregexp_syntax.test primregmatch.test primregsub.test \
primregsuball.test primsprintf.test primstrcmp.test primstring.test \
primstrncmp.test primsubstring.test

EXTRA_DIST = ChangeLog.old defs tests.st $(TESTS)
