# GNU gcal
#
# Copyright (C) 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002,
# 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2013 Free
# Software Foundation, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

EXTRA_DIST = bio.in \
  bio.rc \
  bio.sh \
  bio.texi \
  common.in \
  common.rc \
  common.sh \
  common.texi \
  cycle-1.in \
  cycle-1.sh \
  cycle-1.texi \
  cycle-2.in \
  cycle-2.sh \
  cycle-2.texi \
  demo-1a.in \
  demo-1a.sh \
  demo-1a.texi \
  demo-1.in \
  demo-1.rc \
  demo-1.sh \
  demo-1.texi \
  demo-2a.in \
  demo-2a.sh \
  demo-2a.texi \
  demo-2.in \
  demo-2.rc \
  demo-2.sh \
  demo-2.texi \
  demo-3a.in \
  demo-3a.sh \
  demo-3a.texi \
  demo-3.in \
  demo-3.rc \
  demo-3.sh \
  demo-3.texi \
  dvar-1a.in \
  dvar-1a.sh \
  dvar-1a.texi \
  dvar-1.in \
  dvar-1.rc \
  dvar-1.sh \
  dvar-1.texi \
  include.in \
  include.rc \
  include.sh \
  include.texi \
  lbrk-1a.in \
  lbrk-1a.sh \
  lbrk-1a.texi \
  lbrk-1.in \
  lbrk-1.rc \
  lbrk-1.sh \
  lbrk-1.texi \
  limit.in \
  limit.sh \
  limit.texi \
  moon.in \
  moon.sh \
  moon.texi \
  redir-1a.in \
  redir-1a.sh \
  redir-1a.texi \
  redir-1.in \
  redir-1.rc \
  redir-1.sh \
  redir-1.texi \
  remark.in \
  remark.rc \
  remark.sh \
  remark.texi \
  speci-1a.in \
  speci-1a.sh \
  speci-1a.texi \
  speci-1.in \
  speci-1.rc \
  speci-1.sh \
  speci-1.texi \
  sun-1a.in \
  sun-1a.sh \
  sun-1a.texi \
  sun-1.in \
  sun-1.rc \
  sun-1.sh \
  sun-1.texi \
  swtim-1a.in \
  swtim-1a.sh \
  swtim-1a.texi \
  swtim-1.in \
  swtim-1.rc \
  swtim-1.sh \
  swtim-1.texi \
  tdemo-1a.in \
  tdemo-1a.sh \
  tdemo-1a.texi \
  tdemo-1b.in \
  tdemo-1b.sh \
  tdemo-1b.texi \
  tdemo-1c.in \
  tdemo-1c.sh \
  tdemo-1c.texi \
  tdemo-1.in \
  tdemo-1.rc \
  tdemo-1.sh \
  tdemo-1.texi \
  tdemo-1.txt \
  tvar-1a.in \
  tvar-1a.sh \
  tvar-1a.texi \
  tvar-1.in \
  tvar-1.rc \
  tvar-1.sh \
  tvar-1.texi \
  tvar-2a.in \
  tvar-2a.sh \
  tvar-2a.texi \
  tvar-2.in \
  tvar-2.rc \
  tvar-2.sh \
  tvar-2.texi \
  tvar-3a.in \
  tvar-3a.sh \
  tvar-3a.texi \
  tvar-3.in \
  tvar-3.rc \
  tvar-3.sh \
  tvar-3.texi \
  tvarc-1a.in \
  tvarc-1a.rc \
  tvarc-1a.sh \
  tvarc-1a.texi \
  tvarc-1.in \
  tvarc-1.rc \
  tvarc-1.sh \
  tvarc-1.texi \
  tvarf-1a.in \
  tvarf-1a.sh \
  tvarf-1a.texi \
  tvarf-1.in \
  tvarf-1.rc \
  tvarf-1.sh \
  tvarf-1.texi \
  tvaro-1a.in \
  tvaro-1a.sh \
  tvaro-1a.texi \
  tvaro-1.in \
  tvaro-1.rc \
  tvaro-1.sh \
  tvaro-1.texi \
  wspc-1a.in \
  wspc-1a.sh \
  wspc-1a.texi \
  wspc-1.in \
  wspc-1.rc \
  wspc-1.sh \
  wspc-1.texi
