## Process this file with automake to produce Makefile.in -*-Makefile-*-
AUTOMAKE_OPTIONS = ansi2knr

EXTRA_DIST = calendar.scm parse.scm
guiledatedir = @GUILE_SITE@/combine_scm
guiledate_DATA = calendar.scm parse.scm

localedir = $(datadir)/locale

## $(PROGRAMS): $(top_builddir)/lib/libfetish.a

## If necessary, add -lm to resolve use of pow in lib/strtod.c.

